<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffeef8ff"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/button1"
        android:id="@+id/button"
        android:onClick="sendMessage"
        android:background="@color/app_button"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@color/app_button"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:onClick="sendMessage"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:onClick="sendMessage"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@color/app_button"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:onClick="sendMessage"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:onClick="sendMessage"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="#ffff005a"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:textSize="16sp" />
</LinearLayout>
